# lity-local

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  main.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  bridge.ts  devMock.ts  index.css  main.tsx  types.ts
frontend/src/components/: CharactersModal.tsx  ChatHeader.tsx  CodeBlock.tsx  CommandApprovalBanner.tsx  CommandPalette.tsx  Composer.tsx  ConversationInstructionsModal.tsx  Diff.tsx  DiffCard.tsx  EmptyState.tsx  GitPanel.tsx  HealthMenu.tsx  Icons.tsx  Markdown.tsx  MemoryModal.tsx  Mermaid.tsx  Message.tsx  MessageList.tsx  ModeBar.tsx  ModelPicker.tsx  ModelsModal.tsx  ReasoningBlock.tsx  SettingsModal.tsx  Sidebar.tsx  SkillsModal.tsx  SourceCards.tsx  StepTimeline.tsx  UsageModal.tsx  WebSetupModal.tsx  WorkspacePanel.tsx
frontend/src/hooks/: useInitialBackendLoad.ts  useMediaQuery.ts  useTheme.ts
frontend/src/lib/: cx.ts  imageSession.ts  reasoning.ts  sources.ts  strip.ts  videoSession.ts
frontend/src/ui/: index.ts  overlay.tsx  primitives.tsx
packaging/: README.md
packaging/pyinstaller/: lity.spec
scripts/: build_macos.sh  build_windows.ps1  dev_macos.sh  setup.ps1  setup.sh
src/lity/: __init__.py  __main__.py
src/lity/app/: _controller_audio.py  _controller_background.py  _controller_conversations.py  _controller_git.py  _controller_health.py  _controller_models.py  _controller_retrieval.py  _modutil.py  controller.py  main.py  results.py  services.py
src/lity/core/: __init__.py  compatibility.py  gpu_db.py  hardware.py  image_model_advisor.py  model_advisor.py  model_catalog.py  model_catalog_loader.py  models.py  video_model_advisor.py
src/lity/infrastructure/: __init__.py  logging.py  paths.py  settings.py
src/lity/interfaces/cli/: console.py
src/lity/interfaces/desktop_qt/: __init__.py  app.py  main_window.py  workers.py
src/lity/interfaces/desktop_qt/widgets/: chat_panel.py  diff_review.py  image_result.py  sidebar.py
src/lity/interfaces/desktop_web/: _api_conversations.py  _api_skills.py  _api_workspace.py  api.py  app.py
src/lity/resources/: model_catalog.json
src/lity/services/: claude_cli.py  codex_cli.py  codex_rag.py  external.py  grok_cli.py
src/lity/services/ai/: __init__.py  _engine_admin.py  _engine_common.py  _engine_tasks.py  agent.py  command_guard.py  context.py  intent_router.py  ollama_engine.py  openai_compatible.py  orchestrator.py  planner.py  prompts.py  receipts.py  tool_runtime.py  tool_specs.py
src/lity/services/audio/: __init__.py  stt.py  tts.py  vad.py
src/lity/services/characters/: __init__.py  generator.py  store.py
src/lity/services/commands/: __init__.py  policy.py  runner.py
src/lity/services/editing/: __init__.py  code_editor.py  fuzzy_match.py  history.py  policy.py  write_policy.py
src/lity/services/files/: __init__.py  documents.py  manager.py
src/lity/services/git/: service.py
src/lity/services/image_generation/: checkpoints.py  engine_install.py  launcher.py  launcher_paths.py  launcher_platform.py  launcher_process.py  local_engine.py  manager.py  mlx_engine.py  model_download.py  prompt_builder.py  settings.py  stable_diffusion.py  update_interpreter.py
src/lity/services/mcp/: __init__.py  manager.py
src/lity/services/memory/: __init__.py  conversation_store.py  fact_store.py  json_memory.py  memory_index.py
src/lity/services/rag/: agentic.py  bm25.py  chunking.py  contextualize.py  hybrid.py  indexer.py  rerank.py  sqlite_store.py  vector_index.py
src/lity/services/skills/: __init__.py  catalog.py  models.py  parser.py  router.py  store.py
src/lity/services/video_generation/: __init__.py  checkpoints.py  engine_install.py  local_engine.py  manager.py  mlx_engine.py  model_download.py  prompt_builder.py  settings.py  update_interpreter.py
src/lity/services/web/: __init__.py  fetch.py  http_util.py  research.py  router.py  search.py  searxng_setup.py
tests/: test_agent_components.py  test_agent_loop.py  test_characters.py  test_claude_cli.py  test_codex_cli.py  test_codex_rag.py  test_command_allowlist.py  test_command_guard.py  test_compatibility.py  test_context_budget.py  test_context_compaction.py  test_contextualize.py  test_controller_components.py  test_controller_contracts.py  test_conversation_instructions.py  test_conversation_store.py  test_corrective_rag.py  test_desktop_qt_contracts.py  test_desktop_web_api.py  test_desktop_web_components.py  test_dev_scripts.py  test_documents.py  test_engine_options.py  test_external_services.py  test_fact_store.py  test_file_scaling_and_security.py  test_files_and_editor.py  test_frontend_setup.py  test_fuzzy_editing.py  test_grok_cli.py  test_hardware.py  test_image_download.py  test_image_generation.py  test_image_model_advisor.py  test_latency_optimizations.py  test_lmstudio_provider.py  test_mcp.py  test_memory_and_settings.py  test_memory_index.py  test_mlx_engine.py  (+22 more)
(+4 files in other folders)
